Update System.Diagnostics.DiagnosticSource to v9.0.11

--- a/Src/Dnn/ToSic.Sxc.Dnn/ToSic.Sxc.Dnn.csproj
+++ b/Src/Dnn/ToSic.Sxc.Dnn/ToSic.Sxc.Dnn.csproj
@@ -66,6 +66,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="9.0.11" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Connect.Dnn.Koi, Version=2.0.0.27364, Culture=neutral, processorArchitecture=MSIL">
