--- a/Src/Oqtane/ToSic.Sxc.Oqt.Server/ToSic.Sxc.Oqt.Server.csproj
+++ b/Src/Oqtane/ToSic.Sxc.Oqt.Server/ToSic.Sxc.Oqt.Server.csproj
@@ -81,6 +81,7 @@
     <EmbeddedResource Include="Scripts\ToSic.Sxc.19.00.00.sql" />
     <EmbeddedResource Include="Scripts\ToSic.Sxc.20.00.00.sql" />
     <EmbeddedResource Include="Scripts\ToSic.Sxc.20.00.05.sql" />
+    <EmbeddedResource Include="Scripts\ToSic.Sxc.21.00.00.sql" />
     <EmbeddedResource Include="Scripts\ToSic.Sxc.Install.sql" />
     <EmbeddedResource Include="Scripts\ToSic.Sxc.Uninstall.sql" />
   </ItemGroup>
