--- a/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
+++ b/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
@@ -11,11 +11,6 @@
   <!-- The Dnn Build Package - Should only run after release compile -->
   <Target Name="PackageModule" AfterTargets="Build" DependsOnTargets="BuildConfigTarget" Condition=" '$(Configuration)|$(Platform)|$(SourceExist)' == 'Release|AnyCPU|true' ">
 
-    <Message Text="DnnBuild: Starting DNN Build" Importance="high" />
-    <Message Text="DnnBuild: Will get Assets from $(Source)" Importance="high" />
-
-    <Error Condition="!Exists('$(Source)')" Text="DnnBuild: ERROR: Assets folder not found at $(Source)" />
-
     <!-- Properties / Variables for the DNN Build which we need early on-->
     <PropertyGroup>
       <DnnManifestFile>DnnPackageBuilder/ToSic.Sxc.Dnn.dnn</DnnManifestFile>
@@ -26,6 +21,8 @@
       <Output TaskParameter="Value" PropertyName="Version" />
     </XmlRead>
 
+    <Message Text="DnnBuild: Starting DNN Build version $(Version)" Importance="high" />
+
     <PropertyGroup>
       <PackageName>ToSic.Sxc.Dnn</PackageName>
       <TempPackageFolder>$(MSBuildProjectDirectory)\ModulePackages\Temp</TempPackageFolder>
@@ -33,8 +30,12 @@
       <TempPackagePdbFolder>$(MSBuildProjectDirectory)\ModulePackages\TempPdb</TempPackagePdbFolder>
       <DnnInstallPackage Condition=" '$(DnnInstallPackage)' == '' ">../../../InstallPackages/Dnn-Installer</DnnInstallPackage>
       <FinalZipFileName>$(PackageName).$(Version)_Install.zip</FinalZipFileName>
-      <SourceMapsFolder>$(Source)..\$(Version)</SourceMapsFolder>
+      <!-- 2026-01-08 stv: since '2sxc-sources\_latest' is not in use anymore we use '2sxc-sources\$(Version)' -->
+      <SourceVersionFolder>$(Source)..\$(Version)</SourceVersionFolder>
     </PropertyGroup>
+
+    <Error Condition="!Exists('$(SourceVersionFolder)')" Text="DnnBuild: ERROR: Source version $(Version) assets folder not found at $(SourceVersionFolder)" />
+    <Message Text="DnnBuild: Will get source version $(Version) assets from $(SourceVersionFolder)" Importance="high" />
 
     <ItemGroup>
       <DefaultExclude Include="**\bin\**" />
@@ -65,13 +66,11 @@
 
       <!-- all js + css + html etc. stuff from assets-->
       <InstallInclude Include="$(Source)readme.md" Exclude="@(DefaultExclude)" />
-      <InstallIncludeJsJs Include="$(Source)\js\**\*.*" Exclude="$(Source)\js\**\*.map" />
+      <InstallIncludeJsJs Include="$(SourceVersionFolder)\js\**\*.*" Exclude="$(SourceVersionFolder)\js\**\*.map" />
       <!-- 2025-11-25 2dm for v20.09 - moving wysiwyg & gps to /extensions -->
       <!--<InstallIncludeSystem Include="$(Source)\system\**\*.*" Exclude="$(Source)\system\**\*.map" />-->
-      <InstallIncludeJsExtensions Include="$(Source)\extensions\**\*.*" Exclude="$(Source)\extensions\**\*.map" />
-      <InstallIncludeJsDist Include="$(Source)\dist\**\*.*" Exclude="$(Source)\dist\**\*.map" />
-      <!-- WIP - turnOn map files must be included for now-->
-      <InstallIncludeJsDist Include="$(Source)\turnOn\*.*" />
+      <InstallIncludeJsExtensions Include="$(SourceVersionFolder)\extensions\**\*.*" Exclude="$(SourceVersionFolder)\extensions\**\*.map" />
+      <InstallIncludeJsDist Include="$(SourceVersionFolder)\dist\**\*.*" Exclude="$(SourceVersionFolder)\dist\**\*.map" />
 
       <!-- all global types and queries -->
       <InstallInclude Include="..\..\Data\**\App_Data\new-app\**\*.*" />
@@ -295,21 +294,7 @@
       <Output TaskParameter="Include" ItemName="OutputContent" />
     </CreateItem>
     <Zip Files="@(OutputContent)" WorkingDirectory="$(TempPackageFolder)" ZipFileName="$(DnnInstallPackage)/$(FinalZipFileName)" />
-
-
-    <!-- Auto-deploy the externalized map files to another repo-->
-    <!-- New in 2020-09 From now on we'll also publish the built js files to sources.2sxc.org and not include them in 2sxc-repo any more -->
-    <Message Text="DnnBuild: Copying all Assets to versioned folder $(SourceMapsFolder)" Importance="high" />
-    <ItemGroup>
-      <!--include the dist, js and system folders, but as a subfolder (that's why the strange syntax) -->
-      <ExternalSourceMaps Include="$(Source)\*dist\**\*.*" />
-      <ExternalSourceMaps Include="$(Source)\*js\**\*.*" />
-      <ExternalSourceMaps Include="$(Source)\*system\**\*.*" />
-    </ItemGroup>
-    <RemoveDir Directories="$(SourceMapsFolder)" />
-    <Copy SourceFiles="@(ExternalSourceMaps)" DestinationFolder="$(SourceMapsFolder)\%(RecursiveDir)" />
-
-
+    
     <!-- Cleanup -->
     <Message Text="DnnBuild: Clean-up temporary folders" Importance="high" />
     <RemoveDir Directories="$(TempPackageFolder)" />
