--- a/Src/Dnn/ToSic.Sxc.Dnn.WebApi/ToSic.Sxc.Dnn.WebApi.csproj
+++ b/Src/Dnn/ToSic.Sxc.Dnn.WebApi/ToSic.Sxc.Dnn.WebApi.csproj
@@ -27,18 +27,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetNuke.Core" Version="9.6.1">
+    <PackageReference Include="DotNetNuke.Core" Version="9.11.0">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
-    <PackageReference Include="DotNetNuke.Web" Version="9.6.1">
+    <PackageReference Include="DotNetNuke.Web" Version="9.11.0">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
-    <PackageReference Include="DotNetNuke.Web.Mvc" Version="9.6.1" />
-    <PackageReference Include="Microsoft.AspNet.WebApi.WebHost">
-      <Version>5.2.3</Version>
+    <PackageReference Include="DotNetNuke.Web.Mvc" Version="9.11.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.WebHost" Version="5.2.9">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.2.9" />
     <PackageReference Include="System.Text.Json" Version="9.0.0">
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
