Add Editions and Generators system DataSources

--- a/Src/Sxc/ToSic.Sxc.Code.Generate/ToSic.Sxc.Code.Generate.csproj
+++ b/Src/Sxc/ToSic.Sxc.Code.Generate/ToSic.Sxc.Code.Generate.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.DataSource\ToSic.Eav.DataSource.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Data\ToSic.Sxc.Data.csproj" />
   </ItemGroup>
 
